--- a/src/components/NavRoot/NavPC/NavPC.css
+++ b/src/components/NavRoot/NavPC/NavPC.css
@@ -6,7 +6,8 @@
     height: 50px;
     max-width: 100%;
     background-color: rgb(128,128,128,0.1);
-    padding: 1rem 1rem 0rem 1rem;
+    padding: 0rem 1rem 0rem 1rem;
+    margin: 0;
 }
 
 .LinkPC {
