--- a/src/pages/BilleM3/BilleM3.css
+++ b/src/pages/BilleM3/BilleM3.css
@@ -1,6 +1,7 @@
 .bille-canvasM3 {
-    width: 100%;
-    height: 100%;
-    background-color: black;
-  }
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+}
   
