--- a/src/components/NavRoot/NavPC/NavPC.css
+++ b/src/components/NavRoot/NavPC/NavPC.css
@@ -5,7 +5,7 @@
     width: calc(100% - 2rem);
     height: 50px;
     max-width: 100%;
-    background-color: rgb(128,128,128,0.1);
+    background-color: rgb(20, 20, 20);
     padding: 0rem 1rem 0rem 1rem;
     margin: 0;
 }
