--- a/src/pages/BilleM2/BilleM2.css
+++ b/src/pages/BilleM2/BilleM2.css
@@ -3,5 +3,9 @@
     width: 100%;
     height: 100%;
     background-color: black;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
   }
   
