--- a/src/pages/BilleM7/BilleM7.css
+++ b/src/pages/BilleM7/BilleM7.css
@@ -1,7 +1,10 @@
 .bille-canvasM7 {
-    flex: 1;
-    width: 100%;
-    height: calc(100% - 50px);
-    background-color: black;
-  }
-  
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
