--- a/src/components/NavRoot/NavPC/NavPC.css
+++ b/src/components/NavRoot/NavPC/NavPC.css
@@ -4,12 +4,13 @@
     align-items: center;
     width: calc(100% - 2rem);
     height: 50px;
-    max-width: 100%;
-    background-color: rgb(20, 20, 20);
+    max-width: 1200px;
     padding: 0rem 1rem 0rem 1rem;
     margin: 0;
 }
 
 .LinkPC {
     color: white;
+    text-decoration: none;
+    font-weight: bold;
 }
